fixed navbar on tablet

--- a/css/index.css
+++ b/css/index.css
@@ -239,7 +239,16 @@ title {
 	#iod-right{
 	display:none;
 	}
+
+	nav{
+		margin-top:5%;
+		background:none;
+	}
 	
+	.navimage{
+		margin-top: 3%;
+		margin-left: 60%;
+	}
 	nav a{
 		margin:2.4%;
 	}
@@ -281,7 +290,6 @@ title {
 	}
 	
 	#iod-left{
-		margin-top: 80%;
 	}
 
 	#feature-about{
